--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Feed" tabIcon="megaphone"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Perfil" tabIcon="cog"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Acerca de" tabIcon="contact"></ion-tab>
 </ion-tabs>
