Navegación con parámetros

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,5 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button color="primary" (click)="navegarALugar()">Button</button>
+  <button ion-button (click)="navegarALugar('Primer Lugar')">Ir a Primer Lugar</button>
+  <button ion-button (click)="navegarALugar('Segundo Lugar')">Ir a Segundo Lugar</button>
 </ion-content>
