--- a/src/pages/lugar/lugar.html
+++ b/src/pages/lugar/lugar.html
@@ -11,5 +11,6 @@
 </ion-header>
 
 <ion-content padding>
+  <button ion-button color="primary" (click)="navigateBack()">Regresar</button>
   {{ nombreLugar }}
 </ion-content>
