--- a/src/pages/lugar/lugar.html
+++ b/src/pages/lugar/lugar.html
@@ -12,5 +12,6 @@
 
 <ion-content padding>
   <button ion-button color="primary" (click)="navigateBack()">Regresar</button>
+  <button ion-button color="primary" (click)="navigateToThird()">Ir a Tercera</button>
   {{ nombreLugar }}
 </ion-content>
