Alineación y transformación de texto

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,12 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button (click)="navegarALugar('Primer Lugar')">Ir a Primer Lugar</button>
-  <button ion-button (click)="navegarALugar('Segundo Lugar')">Ir a Segundo Lugar</button>
+  <p text-center>Texto normal</p>
+  <p text-left>Texto izquierda</p>
+  <p text-right>Texto derecha</p>
+  <p text-center text-uppercase>texto mayúsculas</p>
+  <p text-lowercase>TEXTO MINÚSCULAS</p>
+  <p text-capitalize>texto con puras minúsculas</p>
+  <p text-wrap>texto con wrap texto con wrap texto con wrap texto con wrap texto con wrap texto con wrap</p>
+  <p text-nowrap>texto sin wrap texto sin wrap texto sin wrap texto sin wraptexto sin wrap texto sin wrap</p>
 </ion-content>
