--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,13 +6,16 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <p text-center>Texto normal</p>
-  <p text-left>Texto izquierda</p>
-  <p text-right>Texto derecha</p>
-  <p text-center text-uppercase>texto mayúsculas</p>
-  <p text-lowercase>TEXTO MINÚSCULAS</p>
-  <p text-capitalize>texto con puras minúsculas</p>
-  <p text-wrap>texto con wrap texto con wrap texto con wrap texto con wrap texto con wrap texto con wrap</p>
-  <p text-nowrap>texto sin wrap texto sin wrap texto sin wrap texto sin wraptexto sin wrap texto sin wrap</p>
+<ion-content>
+  <p padding>Texto cualquiera</p>
+  <p padding-left>Texto cualquiera</p>
+  <p padding-right>Texto cualquiera</p>
+  <p padding-bottom>Texto cualquiera</p>
+  <p padding-top>Texto cualquiera</p>
+
+  <p margin>Texto cualquiera</p>
+  <p margin-left>Texto cualquiera</p>
+  <p margin-right>Texto cualquiera</p>
+  <p margin-bottom>Texto cualquiera</p>
+  <p margin-top>Texto cualquiera</p>
 </ion-content>
