--- a/src/pages/lugar/lugar.html
+++ b/src/pages/lugar/lugar.html
@@ -11,7 +11,30 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button color="primary" (click)="navigateBack()">Regresar</button>
-  <button ion-button color="primary" (click)="navigateToThird()">Ir a Tercera</button>
-  {{ nombreLugar }}
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Nombre</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>Direción</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>Categoria</ion-label>
+      <ion-select>
+        <ion-option value="AireLibre">Aire libre</ion-option>
+        <ion-option value="LugarCerrado">Lugar cerrado</ion-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>Descripción</ion-label>
+      <ion-textarea></ion-textarea>
+    </ion-item>
+  </ion-list>
+
+  <button ion-button full>Guardar</button>
 </ion-content>
