--- a/src/pages/lugar/lugar.html
+++ b/src/pages/lugar/lugar.html
@@ -14,17 +14,17 @@
   <ion-list>
     <ion-item>
       <ion-label floating>Nombre</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)]="lugar.nombre"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Direción</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)]="lugar.direccion"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Categoria</ion-label>
-      <ion-select>
+      <ion-select [(ngModel)]="lugar.categoria">
         <ion-option value="AireLibre">Aire libre</ion-option>
         <ion-option value="LugarCerrado">Lugar cerrado</ion-option>
       </ion-select>
@@ -32,9 +32,9 @@
 
     <ion-item>
       <ion-label floating>Descripción</ion-label>
-      <ion-textarea></ion-textarea>
+      <ion-textarea [(ngModel)]="lugar.descripcion"></ion-textarea>
     </ion-item>
   </ion-list>
 
-  <button ion-button full>Guardar</button>
+  <button ion-button full (click)="guardarLugar()">Guardar</button>
 </ion-content>
